--- a/app/src/main/res/layout/view.xml
+++ b/app/src/main/res/layout/view.xml
@@ -7,22 +7,33 @@
     tools:context="com.example.sagar.popupshops_buyerside.view">
 
     <Button
-        android:id="@+id/buyer_button"
+        android:id="@+id/lis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/buyer"
+        android:text="View Current Items"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="314dp" />
+        android:layout_marginTop="264dp" />
 
     <Button
-        android:id="@+id/vendor_button"
+        android:id="@+id/ad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/vendor"
+        android:text="Add Item "
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/buyer_button" />
+        app:layout_constraintTop_toBottomOf="@+id/lis" />
+
+    <Button
+        android:id="@+id/loc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Update Location"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/ad" />
+
 </android.support.constraint.ConstraintLayout>
