--- a/app/src/main/res/layout/vendor_dashboard.xml
+++ b/app/src/main/res/layout/vendor_dashboard.xml
@@ -4,59 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sagar.popupshops_buyerside.vendor_dashboard">
+    tools:context="com.example.sagar.popupshops_buyerside.Shop.vendor_dashboard">
 
     <Button
         android:id="@+id/lis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="42dp"
         android:text="View Current Items"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editer"
-        app:layout_constraintHorizontal_bias="0.502"
-        android:layout_marginTop="42dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editer" />
 
     <Button
         android:id="@+id/ad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="Add Item "
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lis"
-        android:layout_marginTop="30dp"
-        app:layout_constraintHorizontal_bias="0.501" />
+        app:layout_constraintTop_toBottomOf="@+id/lis" />
 
     <Button
         android:id="@+id/loc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="Update Location"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/ad" />
 
     <EditText
         android:id="@+id/editer"
         android:layout_width="322dp"
         android:layout_height="110dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/shop_name"
+        android:layout_marginTop="44dp"
         android:hint="Put Your Shop Info Here"
         android:inputType="text"
-        android:layout_marginTop="44dp" />" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/shop_name" />" />
     <EditText
         android:id="@+id/shop_name"
         android:layout_width="322dp"
         android:layout_height="50dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="35dp"
         android:hint="Shop Name"
         android:inputType="text"
-        android:layout_marginTop="35dp" />" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />" />
 
 </android.support.constraint.ConstraintLayout>
