--- a/app/src/main/res/layout/vendor_dashboard.xml
+++ b/app/src/main/res/layout/vendor_dashboard.xml
@@ -15,6 +15,7 @@
         android:layout_marginRight="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="71dp"
+        android:clickable="true"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:orientation="vertical"
