--- a/app/src/main/res/layout/addview.xml
+++ b/app/src/main/res/layout/addview.xml
@@ -8,75 +8,89 @@
         style="@android:style/Widget.Holo.ImageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="53dp"
         android:adjustViewBounds="false"
         android:scaleX="2."
         android:scaleY="2"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:layout_marginTop="53dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <Button
         android:id="@+id/attachButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton1"
-        android:text="Attach Image"
         android:layout_below="@+id/imageButton1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp" />
+        android:layout_marginTop="39dp"
+        android:text="Attach Image"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton1" />
 
     <Button
         android:id="@+id/uploadButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/categoryinput"
-        android:text="upload"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="31dp"
-        android:layout_alignRight="@+id/priceInput"
         android:layout_alignEnd="@+id/priceInput"
         android:layout_alignLeft="@+id/priceInput"
-        android:layout_alignStart="@+id/priceInput" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/priceInput"
+        android:layout_alignStart="@+id/priceInput"
+        android:layout_marginBottom="31dp"
+        android:text="upload"
+        app:layout_constraintTop_toBottomOf="@+id/categoryinput" />
 
     <EditText
         android:id="@+id/nameInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/attachButton"
+        android:layout_centerHorizontal="true"
         android:ems="10"
-        android:hint="name"
+        android:hint="description"
         android:inputType="textPersonName"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/attachButton"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        app:layout_constraintTop_toBottomOf="@+id/attachButton" />
 
     <EditText
         android:id="@+id/priceInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/nameInput"
+        android:layout_alignStart="@+id/nameInput"
+        android:layout_below="@+id/nameInput"
+        android:layout_marginTop="17dp"
         android:ems="10"
         android:hint="price"
         android:inputType="numberDecimal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameInput"
-        android:layout_below="@+id/nameInput"
-        android:layout_alignLeft="@+id/nameInput"
-        android:layout_alignStart="@+id/nameInput"
-        android:layout_marginTop="17dp" />
+        app:layout_constraintTop_toBottomOf="@+id/nameInput" />
+
+    <EditText
+        android:id="@+id/itemStockInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/priceInput"
+        android:layout_alignStart="@+id/priceInput"
+        android:layout_below="@+id/priceInput"
+        android:layout_marginTop="17dp"
+        android:ems="10"
+        android:hint="stock"
+        android:inputType="text"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/priceInput" />
 
     <AutoCompleteTextView
         android:id="@+id/categoryinput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/itemStockInput"
+        android:layout_alignStart="@+id/itemStockInput"
+        android:layout_below="@+id/itemStockInput"
+        android:layout_marginTop="17dp"
         android:ems="10"
         android:hint="category"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/priceInput"
         android:maxLength="25"
-        android:layout_marginTop="17dp"
-        android:layout_below="@+id/priceInput"
-        android:layout_alignLeft="@+id/priceInput"
-        android:layout_alignStart="@+id/priceInput" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/itemStockInput" />
 
 </RelativeLayout>
