--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-
-    <android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/lib/"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cv"
-    >
+    android:layout_width="match_parent"
+
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,7 +13,7 @@
         android:padding="16dp">
 
         <ImageView
-            android:id="@+id/person_photo"
+            android:id="@+id/itemImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -25,7 +21,7 @@
             android:layout_marginRight="16dp" />
 
         <TextView
-            android:id="@+id/person_name"
+            android:id="@+id/itemDescr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -33,25 +29,31 @@
             android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/person_age"
+            android:id="@+id/itemPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/person_name"
             android:layout_toRightOf="@+id/person_photo" />
+
+        <TextView
+            android:id="@+id/itemCateg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/person_photo" />
+
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
 
             android:layout_height="wrap_content"
-            android:scaleX="0.5"
-            android:scaleY="0.5"
-            android:backgroundTint="#FF0000"
-            android:clickable="true"
+            android:layout_alignBottom="@+id/person_age"
+            android:layout_alignParentEnd="true"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_alignBottom="@+id/person_age"
-            android:layout_alignParentEnd="true" />
+            android:backgroundTint="#FF0000"
+            android:clickable="true"
+            android:scaleX="0.5"
+            android:scaleY="0.5" />
 
 
     </RelativeLayout>
