--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -21,23 +21,32 @@
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_width="375dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="47dp"
         android:text="Login"
+        android:textSize="18dp"
+        android:textColor="@color/white"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintLeft_toLeftOf="@+id/signupButton"
         app:layout_constraintRight_toRightOf="@+id/signupButton"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintHorizontal_bias="1.0" />
 
     <Button
         android:id="@+id/signupButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="58dp"
+        android:layout_width="375dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="174dp"
+        android:textSize="18dp"
+        android:height="@android:dimen/notification_large_icon_height"
+        android:background="@color/colorPrimary"
         android:text="Sign Up"
+        android:textColor="@color/white"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo"
