--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,10 +10,11 @@
         android:id="@+id/passwordInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="47dp"
-        android:layout_marginRight="47dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginRight="74dp"
+        android:layout_marginTop="18dp"
         android:ems="10"
+        android:textColor="@color/black"
+        android:textSize="15sp"
         android:inputType="textPassword"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailInput"
@@ -24,13 +25,16 @@
         android:id="@+id/emailInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="58dp"
+        android:layout_marginTop="124dp"
         android:ems="10"
+        android:textSize="15sp"
         android:inputType="textEmailAddress"
+        android:textColor="@color/black"
         app:layout_constraintLeft_toLeftOf="@+id/passwordInput"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginLeft="-139dp" />
 
     <TextView
         android:id="@+id/textView"
@@ -41,6 +45,8 @@
         android:layout_marginRight="17dp"
         android:layout_marginStart="8dp"
         android:text="Email"
+        android:textSize="15sp"
+        android:textColor="@color/black"
         app:layout_constraintBaseline_toBaselineOf="@+id/emailInput"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/emailInput"
@@ -51,26 +57,36 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="21dp"
-        android:layout_marginRight="21dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginLeft="8dp"
+        android:textColor="@color/black"
+        android:layout_marginRight="17dp"
+        android:layout_marginStart="8dp"
+        android:textSize="15sp"
+
         android:text="Password"
         app:layout_constraintRight_toLeftOf="@+id/passwordInput"
         app:layout_constraintTop_toTopOf="@+id/passwordInput"
+        app:layout_constraintLeft_toLeftOf="parent"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="14dp"
+        app:layout_constraintHorizontal_bias="0.57" />
 
     <Button
         android:id="@+id/loginSubmit"
-        android:layout_width="wrap_content"
+        android:layout_width="375dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="30dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textColor="@color/white"
         android:text="Login"
-        app:layout_constraintLeft_toLeftOf="@+id/passwordInput"
-        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
+        android:textSize="15dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="93dp"
+        app:layout_constraintHorizontal_bias="0.503" />
 
 </android.support.constraint.ConstraintLayout>
