--- a/app/src/main/res/layout/activity_get_location.xml
+++ b/app/src/main/res/layout/activity_get_location.xml
@@ -19,15 +19,15 @@
         android:textColor="@color/grey"
         android:textSize="16dp" />
 
-    <Button
-        android:id="@+id/buttonShowLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:text="Get my Location"
-        android:textColor="@color/grey"/>
+    <!--<Button-->
+        <!--android:id="@+id/buttonShowLocation"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="40dp"-->
+        <!--android:paddingLeft="20dp"-->
+        <!--android:paddingRight="20dp"-->
+        <!--android:text="Get my Location"-->
+        <!--android:textColor="@color/grey"/>-->
 
     <Button
         android:id="@+id/buttonLocationUpdates"
