--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/ic_bg"
     tools:context="com.example.sagar.popupshops_buyerside.Registration.LaunchActivity">
 
     <ImageView
@@ -26,8 +27,8 @@
         android:layout_marginBottom="47dp"
         android:text="Login"
         android:textSize="18dp"
-        android:textColor="@color/white"
-        android:background="@color/colorPrimary"
+        android:textColor="@color/black"
+        android:background="@null"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintLeft_toLeftOf="@+id/signupButton"
         app:layout_constraintRight_toRightOf="@+id/signupButton"
@@ -43,9 +44,9 @@
         android:layout_marginTop="174dp"
         android:textSize="18dp"
         android:height="@android:dimen/notification_large_icon_height"
-        android:background="@color/colorPrimary"
+        android:background="@null"
         android:text="Sign Up"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
