--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="74dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="18sp"
         android:ems="10"
         android:textColor="@color/black"
         android:textSize="15sp"
