--- a/app/src/main/res/layout/activity_select_action.xml
+++ b/app/src/main/res/layout/activity_select_action.xml
@@ -10,47 +10,41 @@
         android:id="@+id/logOutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="47dp"
         android:text="Log Out"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="-19dp" />
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="263dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
-        android:weightSum="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+
+    <Button
+        android:id="@+id/buyButton"
+        android:layout_width="375dp"
+        android:layout_height="200dp"
+        android:background="@color/colorPrimary"
+        android:text="Go Shopping"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.616"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1">
+        app:layout_constraintTop_toBottomOf="@id/logOutButton"
+        android:layout_marginTop="-94dp"
+        app:layout_constraintHorizontal_bias="0.466" />
 
-        <Button
-            android:id="@+id/buyButton"
-            android:layout_width="match_parent"
-            android:layout_height="129dp"
-            android:text="Buy" />
-
-        <Button
-            android:id="@+id/sellButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="My Pop Up Shop" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/sellButton"
+        android:layout_width="375dp"
+        android:layout_height="200dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintTop_toBottomOf="@id/buyButton"
+        android:text="My Pop Up Shop"
+        android:textColor="@color/white"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textSize="18sp"
+        android:layout_marginTop="34dp"
+        app:layout_constraintHorizontal_bias="0.466" />
 </android.support.constraint.ConstraintLayout>
