--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -1,62 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:paddingTop="18dp"--><!--android:paddingBottom="18dp"--><!--android:orientation="horizontal">--><!--<ImageView--><!--android:id="@+id/itemImage"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_alignParentStart="true"--><!--android:layout_alignParentTop="true"--><!--android:layout_marginRight="16dp" />-->
+
+<!--<TextView--><!--android:id="@+id/itemDescr"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_alignParentTop="true" />-->
+
+<!--<TextView--><!--android:id="@+id/itemPrice"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content" />-->
+
+<!--<TextView--><!--android:id="@+id/itemCateg"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content" />--><!--</LinearLayout>-->
+
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cv"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp">
 
-    android:layout_height="wrap_content">
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="vertical"
         android:padding="16dp">
 
         <ImageView
             android:id="@+id/itemImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
             android:layout_marginRight="16dp" />
 
         <TextView
             android:id="@+id/itemDescr"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/person_photo"
-            android:textSize="30sp" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/itemPrice"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/person_photo" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/itemCateg"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/person_photo" />
+            android:layout_height="wrap_content" />
 
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
+        <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab"-->
+        <!--android:layout_width="wrap_content"-->
 
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/person_age"
-            android:layout_alignParentEnd="true"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:backgroundTint="#FF0000"
-            android:clickable="true"
-            android:scaleX="0.5"
-            android:scaleY="0.5" />
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignBottom="@+id/person_age"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_marginLeft="16dp"-->
+        <!--android:layout_marginRight="16dp"-->
+        <!--android:backgroundTint="#FF0000"-->
+        <!--android:clickable="true"-->
+        <!--android:scaleX="0.5"-->
+        <!--android:scaleY="0.5" />-->
 
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
 
