--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -44,39 +44,36 @@
             android:layout_height="wrap_content" />
 
 
-        <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/fab"-->
-        <!--android:layout_width="wrap_content"-->
-
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignBottom="@+id/person_age"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_marginLeft="16dp"-->
-        <!--android:layout_marginRight="16dp"-->
-        <!--android:backgroundTint="#FF0000"-->
-        <!--android:clickable="true"-->
-        <!--android:scaleX="0.5"-->
-        <!--android:scaleY="0.5" />-->
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:backgroundTint="#FF0000"
+            android:clickable="true"
+            android:scaleX="0.5"
+            android:scaleY="0.5" />
 
 
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
 
-  <!--  <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab2"
-        android:layout_width="wrap_content"
+    <!--  <android.support.design.widget.FloatingActionButton
+          android:id="@+id/fab2"
+          android:layout_width="wrap_content"
 
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:backgroundTint="#FF4"
-        android:clickable="true"
-        android:scaleX="1.5"
-        android:scaleY="1.5"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="18dp" />
--->
+          android:layout_height="wrap_content"
+          android:layout_gravity="bottom|end"
+          android:backgroundTint="#FF4"
+          android:clickable="true"
+          android:scaleX="1.5"
+          android:scaleY="1.5"
+          android:layout_marginLeft="16dp"
+          android:layout_marginRight="16dp"
+          android:layout_alignParentBottom="true"
+          android:layout_alignParentEnd="true"
+          android:layout_marginEnd="17dp"
+          android:layout_marginBottom="18dp" />
+  -->
