--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg2"
     tools:context="com.example.sagar.popupshops_buyerside.Registration.LaunchActivity">
+
+    <!--android:background="@drawable/bg2"-->
+
 
     <ImageView
         android:id="@+id/logo"
@@ -25,28 +27,28 @@
         android:layout_width="375dp"
         android:layout_height="70dp"
         android:layout_marginBottom="47dp"
-        android:text="Login"
-        android:textSize="18dp"
-        android:textColor="@color/white"
         android:background="@color/colorPrimary"
+        android:text="Login"
+        android:textColor="@color/white"
+        android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="@+id/signupButton"
         app:layout_constraintRight_toRightOf="@+id/signupButton"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintHorizontal_bias="1.0" />
+        tools:layout_constraintRight_creator="1" />
 
     <Button
         android:id="@+id/signupButton"
         android:layout_width="375dp"
         android:layout_height="70dp"
         android:layout_marginTop="174dp"
-        android:textSize="18dp"
         android:height="@android:dimen/notification_large_icon_height"
         android:background="@color/colorPrimary"
         android:text="Sign Up"
         android:textColor="@color/white"
+        android:textSize="18dp"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
