--- a/app/src/main/res/layout/addview.xml
+++ b/app/src/main/res/layout/addview.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -78,10 +79,10 @@
         android:layout_width="217dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
+        android:dropDownHeight="wrap_content"
         android:hint="category"
         android:maxLength="25"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stockInput" />
-
 </android.support.constraint.ConstraintLayout>
